--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
-h1 {
-  color: blue;
+body{
+margin: 0;
+font-family: 'none';
+}
+.jumbotron{
+	background-image: url("../img/backgrounds/landing.jpg");
+	height: 100vh;
+	width:100%;
+	background-repeat: no-repeat;
+	background-size:cover;
+	display: flex;
+	justify-content:center;
+	align-items:center;
+	background-attachment: fixed;
+	padding: 0px;
+	margin: 0px;
+	border: none;
 }
